@startuml

title __TRANSFEROBJECTS's Class Diagram__\n

  namespace pl.edu.uj.ii.ionb.airportmanager.transferobjects {
    class pl.edu.uj.ii.ionb.airportmanager.transferobjects.AirplaneTO {
        - capacity : int
        - flights : List<FlightTO>
        - id : Long
        - name : String
        - type : String
        + equals()
        + getCapacity()
        + getFlights()
        + getId()
        + getName()
        + getType()
        + hashCode()
        + setCapacity()
        + setFlights()
        + setId()
        + setName()
        + setType()
        + toString()
    }
  }
  

  namespace pl.edu.uj.ii.ionb.airportmanager.transferobjects {
    class pl.edu.uj.ii.ionb.airportmanager.transferobjects.DestinationTO {
        - city : String
        - code : String
        - country : String
        - id : Long
        - incoming : List<FlightTO>
        - outcoming : List<FlightTO>
        + equals()
        + getCity()
        + getCode()
        + getCountry()
        + getId()
        + getIncoming()
        + getOutcoming()
        + hashCode()
        + setCity()
        + setCode()
        + setCountry()
        + setId()
        + setIncoming()
        + setOutcoming()
        + toString()
    }
  }
  

  namespace pl.edu.uj.ii.ionb.airportmanager.transferobjects {
    class pl.edu.uj.ii.ionb.airportmanager.transferobjects.FlightTO {
        - arrivalTime : Timestamp
        - departureTime : Timestamp
        - id : Long
        - stewList : List<StewardTO>
        + equals()
        + getAirplaneTO()
        + getArrivalTime()
        + getDepartureTime()
        + getId()
        + getOrigin()
        + getStewList()
        + getTarget()
        + hashCode()
        + setAirplaneTO()
        + setArrivalTime()
        + setDepartureTime()
        + setId()
        + setOrigin()
        + setStewList()
        + setTarget()
        + toString()
    }
  }
  

  namespace pl.edu.uj.ii.ionb.airportmanager.transferobjects {
    class pl.edu.uj.ii.ionb.airportmanager.transferobjects.StewardTO {
        - firstName : String
        - id : Long
        - lastName : String
        + equals()
        + getFirstName()
        + getId()
        + getLastName()
        + hashCode()
        + setFirstName()
        + setId()
        + setLastName()
        + toString()
    }
  }
  

  pl.edu.uj.ii.ionb.airportmanager.transferobjects.FlightTO o-- pl.edu.uj.ii.ionb.airportmanager.transferobjects.AirplaneTO : airplaneTO
  pl.edu.uj.ii.ionb.airportmanager.transferobjects.FlightTO o-- pl.edu.uj.ii.ionb.airportmanager.transferobjects.DestinationTO : origin
  pl.edu.uj.ii.ionb.airportmanager.transferobjects.FlightTO o-- pl.edu.uj.ii.ionb.airportmanager.transferobjects.DestinationTO : target


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
